--- a/Back-end/package.json
+++ b/Back-end/package.json
@@ -22,6 +22,7 @@
     "cookieparser": "^0.1.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-async-errors": "^3.1.1",
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.0",
