--- a/Back-end/package.json
+++ b/Back-end/package.json
@@ -26,8 +26,12 @@
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.0",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "nodemailer": "^6.7.3",
     "nodemon": "^2.0.15",
+    "sequelize": "^6.21.0",
+    "sequelize-typescript": "^2.1.3",
     "ts-node": "^10.7.0",
     "ts-node-dev": "^1.1.8"
   },
