--- a/Back-end/package.json
+++ b/Back-end/package.json
@@ -27,16 +27,19 @@
     "google-auth-library": "^8.0.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.3",
     "nodemon": "^2.0.15",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
+    "pdfkit": "^0.13.0",
     "ts-node": "^10.7.0",
     "ts-node-dev": "^1.1.8"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
-    "@types/passport-google-oauth20": "^2.0.11"
+    "@types/passport-google-oauth20": "^2.0.11",
+    "@types/pdfkit": "^0.12.6"
   }
 }
