--- a/Back-end/package.json
+++ b/Back-end/package.json
@@ -18,6 +18,7 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/nodemailer": "^6.4.4",
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.0",
     "cookie-parser": "^1.4.6",
     "cookieparser": "^0.1.0",
     "dotenv": "^16.0.0",
@@ -28,12 +29,16 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.0",
     "multer": "^1.4.5-lts.1",
+    "mysql2": "^2.3.3",
     "nodemailer": "^6.7.3",
     "nodemon": "^2.0.15",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "pdfkit": "^0.13.0",
+    "sequelize": "^6.21.2",
+    "sequelize-cli": "^6.4.1",
+    "sequelize-typescript": "^2.1.3",
     "ts-node": "^10.7.0",
     "ts-node-dev": "^1.1.8"
   },
